--- a/style.css
+++ b/style.css
@@ -5,16 +5,59 @@
     padding: 0;
 }
 
+.navbar {
+    display: flex;
+    justify-content: flex-end;
+    position: fixed;
+    width: 100%;
+    background: #6a3093; 
+    background: -webkit-linear-gradient(to right, #a044ff, #6a3093);
+    background: linear-gradient(to right, #a044ff, #6a3093);
+    z-index: 10;
+    box-sizing: inherit;
+    font-size: 1.1rem;
+    font-weight: 400;
+    line-height: 3.4rem;
+}
+
+.navlist {
+    color: whitesmoke;
+    display: flex;
+    margin-right: 2rem;
+    font-size: 1.8rem;
+    font-weight: 400;
+    line-height: 3.4rem;
+    font-family: "Josefin Slab", serif;
+
+}
+
+ul{
+    list-style: none;
+}
+
+.navlist a {
+    padding: 2rem;
+    color: whitesmoke;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.navlist a:hover{
+
+    opacity: 0.8;
+}
+
 header {
     width: 100%;
     height: 80vh;
+    padding-top: 3.4rem;
     overflow: hidden;
     position: relative;
 }
 
 .img-wrapper {
     width: 100%;
-    height: 100%;
+    height: 80vh;
     overflow: hidden;
     background-color: rgba(0, 0, 0, 0.8);
 }
@@ -77,6 +120,7 @@ header {
     border: none;
     border-radius: 200px;
     cursor: pointer;
+    opacity: 0;
     animation: movebanner 1s 0.9s forwards;
 
 }
