pequenos ajustes na navbar

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
     background: linear-gradient(to right, #a044ff, #6a3093);
     z-index: 10;
     box-sizing: inherit;
-    font-size: 1.1rem;
+    font-size: 1.2rem;
     font-weight: 400;
     line-height: 3.4rem;
 }
@@ -24,10 +24,12 @@
     color: whitesmoke;
     display: flex;
     margin-right: 2rem;
-    font-size: 1.8rem;
+    font-size: 1.4rem;
     font-weight: 400;
     line-height: 3.4rem;
-    font-family: "Josefin Slab", serif;
+    font-family: "Mulish", serif;
+    opacity: 0;
+    animation: movebanner 1s 0.4s  forwards;
 
 }
 
@@ -36,15 +38,17 @@ ul{
 }
 
 .navlist a {
-    padding: 2rem;
+    display: block;
+    padding: .3rem 2rem;
     color: whitesmoke;
     cursor: pointer;
     text-decoration: none;
+    box-sizing: inherit;
 }
 
 .navlist a:hover{
-
-    opacity: 0.8;
+    background: whitesmoke;
+    color: purple;
 }
 
 header {
@@ -119,16 +123,11 @@ header {
     padding: 1rem 2.5rem;
     border: none;
     border-radius: 200px;
-    cursor: pointer;
     opacity: 0;
+    cursor: pointer;
     animation: movebanner 1s 0.9s forwards;
 
 }
-
-.banner button:hover{
-    opacity: 0.8;
-}
-
 @keyframes movebanner {
     0% {
         transform: translateY(10rem) rotateY(-30deg); 
@@ -137,4 +136,8 @@ header {
         transform: translateY(0) rotateY(0);
         opacity: 1;
     }
+}
+
+.banner button:hover {
+    opacity: 0.8;
 }
