--- a/style.css
+++ b/style.css
@@ -15,22 +15,20 @@
     background: linear-gradient(to right, #a044ff, #6a3093);
     z-index: 10;
     box-sizing: inherit;
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     font-weight: 400;
-    line-height: 3.4rem;
 }
 
 .navlist {
     color: whitesmoke;
     display: flex;
     margin-right: 2rem;
-    font-size: 1.4rem;
-    font-weight: 400;
-    line-height: 3.4rem;
+    line-height: 2.4rem;
     font-family: "Mulish", serif;
     opacity: 0;
     animation: movebanner 1s 0.4s  forwards;
-
+    letter-spacing: .1rem;
+    font-size: 1.2rem;
 }
 
 ul{
@@ -39,29 +37,32 @@ ul{
 
 .navlist a {
     display: block;
-    padding: .3rem 2rem;
+    padding-right: 1.2rem;
+    padding-left: 1.2rem;
     color: whitesmoke;
     cursor: pointer;
     text-decoration: none;
-    box-sizing: inherit;
+    text-transform: uppercase;
+    
 }
 
 .navlist a:hover{
     background: whitesmoke;
     color: purple;
+    border-radius: 5rem;
 }
 
 header {
     width: 100%;
-    height: 80vh;
-    padding-top: 3.4rem;
+    height: 85vh;
+
     overflow: hidden;
     position: relative;
 }
 
 .img-wrapper {
     width: 100%;
-    height: 80vh;
+    height: 85vh;
     overflow: hidden;
     background-color: rgba(0, 0, 0, 0.8);
 }
