--- a/style.css
+++ b/style.css
@@ -3,6 +3,15 @@
 * {
     margin:0;
     padding: 0;
+    list-style: none;
+    text-decoration: none;
+}
+
+/* variaveis de fontes */
+:root {
+    --font-primary: "Baloo Da 2", serif;
+    --font-secundary: "Josefin Slab", serif;
+    --font-action: "Mulish", serif;
 }
 
 .navbar {
@@ -17,14 +26,15 @@
     box-sizing: inherit;
     font-size: 1.4rem;
     font-weight: 400;
+
 }
 
 .navlist {
     color: whitesmoke;
     display: flex;
-    margin-right: 2rem;
+    margin-right: 5rem;
     line-height: 2.4rem;
-    font-family: "Mulish", serif;
+    font-family: var(--font-action);
     opacity: 0;
     animation: movebanner 1s 0.4s  forwards;
     letter-spacing: .1rem;
@@ -42,6 +52,8 @@ ul{
     color: whitesmoke;
     cursor: pointer;
     text-decoration: none;
+    transition: background .4s;
+    border-radius: 5rem;
     
 }
 
@@ -49,7 +61,49 @@ ul{
     background: whitesmoke;
     color: purple;
     border-radius: 5rem;
+    text-shadow: none;
 }
+
+/*Menu Hamburguer*/
+.hamburguer {
+    /* background-color: red; */
+    width: 2rem;
+    height: 2rem;
+    position: fixed;
+    z-index: 100;
+    right: 2rem;
+    top: .2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    cursor: pointer;
+}
+
+
+
+.line {
+    width: 100%;
+    height: .1rem;
+    background-color: whitesmoke;
+    box-shadow: 0.1rem 0.1rem 1px #000;
+    transition: transform .4s;
+    
+}
+
+.show-menu #line1 {
+    transform: rotate(45deg) translate(.3rem, .4rem);
+}
+
+.show-menu #line2 {
+    opacity: 0;
+    visibility: hidden;
+}
+
+.show-menu #line3 {
+    transform: rotate(-45deg) translate(.3rem, -.4rem);
+    
+}
+
 
 header {
     width: 100%;
@@ -92,7 +146,7 @@ header {
 .banner h1 {
     color: whitesmoke;
     font-size: 3.5rem;
-    font-family: "Baloo Da 2", serif;
+    font-family: var(--font-primary);
     font-weight: 300;
     text-shadow: .2rem .3rem 2px rgba(0, 0, 0, .4);
     line-height: 3rem;
@@ -102,7 +156,7 @@ header {
 }
 
 .banner p {
-    font-family: "Josefin Slab", serif;
+    font-family: var(--font-secundary);
     color: whitesmoke;
     font-size: 2rem;
     text-shadow: .2rem .2rem 1px rgba(0, 0, 0, .4);
@@ -112,7 +166,7 @@ header {
 }
 
 .banner button {
-    font-family: "Mulish", serif;
+    font-family: var(--font-action);
     font-size: 1.2rem;
     text-transform: uppercase;
     letter-spacing: .1rem;
@@ -140,4 +194,65 @@ header {
 
 .banner button:hover {
     opacity: 0.8;
+}
+
+.sidebar{
+    width: 20rem;
+    height: 100vh;
+    background-color: whitesmoke;
+    position: fixed;
+    top: 0;
+    right: -20rem;
+    transition: all .4s;
+}
+
+.show-menu .sidebar {
+    right: 0;
+}
+
+.menu {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.menu-item{
+    text-align: center;
+    margin-bottom: .5rem;
+}
+
+.menu-link {
+    font-family: var(--font-action);
+    font-size: 2rem;
+    color: #555;
+    transition: color 1s;
+}
+
+.menu-link:hover{
+    color: purple;
+}
+
+.social-media{
+    position: absolute;
+    bottom: 2rem;
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.social-media i{
+    color: purple;
+    height: 2.5rem;
+    width: 2.5rem;
+    font-size: 2.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: color 1s;
+}
+
+.social-media i:hover{
+    color: rgb(56, 0, 56);
+
 }
