--- a/style.css
+++ b/style.css
@@ -196,6 +196,29 @@ header {
     opacity: 0.8;
 }
 
+.sideheader {
+    background: #6a3093; 
+    position: absolute;
+    top: 5%;
+    width: 100%;
+    height: 5rem;
+    z-index: 101;
+    
+}
+
+.headeri {
+    margin-top: 1rem;
+    font-size: 2.2rem;
+    text-align: center;
+    font-family: var(--font-primary);
+
+}
+
+.hlink {
+    color: whitesmoke;
+}
+
+
 .sidebar{
     width: 20rem;
     height: 100vh;
@@ -205,6 +228,7 @@ header {
     right: -20rem;
     transition: all .4s;
 }
+
 
 .show-menu .sidebar {
     right: 0;
