--- a/style.css
+++ b/style.css
@@ -199,10 +199,11 @@ header {
 .sideheader {
     background: #6a3093; 
     position: absolute;
-    top: 5%;
+    top: 3%;
     width: 100%;
     height: 5rem;
     z-index: 101;
+    margin: none;
     
 }
 
