--- a/style.css
+++ b/style.css
@@ -17,15 +17,17 @@
 .logo {
     font-size: 1.4rem;
     font-weight: bold;
-    z-index: 100;
+    z-index: 101;
     color: whitesmoke;
     text-shadow: 0.1rem 0.1rem 1px rgba(0, 0, 0, 0.61);
     font-family: var(--font-action);
+    cursor: pointer;
 }
 
 .nav-cont {
     box-sizing: border-box;
     height: 3rem;
+    width: 100%;
     padding: 1rem;
     display: flex;
     align-items: center;
@@ -33,19 +35,17 @@
     background: #6a3093; 
     background: -webkit-linear-gradient(to right, #a044ff, #6a3093);
     background: linear-gradient(to right, #a044ff, #6a3093);
+    position: fixed;
+    z-index: 100;
 }
 
 .navbar {
     display: flex;
-    justify-content: flex-end;
+    justify-content: right;
     position: fixed;
     width: 100%;
-
-    z-index: 10;
-    box-sizing: inherit;
+    z-index: 100;
     font-size: 1.4rem;
-    font-weight: 400;
-
 }
 
 .navlist {
@@ -139,22 +139,21 @@ ul{
 
 header {
     width: 100%;
-    height: 85vh;
-
+    height: 90vh;
     overflow: hidden;
     position: relative;
 }
 
 .img-wrapper {
     width: 100%;
-    height: 85vh;
+    height: 90vh;
     overflow: hidden;
     background-color: rgba(0, 0, 0, 0.8);
 }
 
 .img-wrapper img {
     width: 100%;
-    height: 80vh;
+    height: 90vh;
     object-fit: cover;
     opacity: 0.5;
     animation: zoom 28s;
@@ -311,4 +310,92 @@ header {
 .social-media i:hover{
     color: rgb(56, 0, 56);
 
+}
+.conhecimentos {
+    display: grid;
+    grid-template-columns: repeat(16, 1fr);
+    grid-template-rows: repeat(6, 6rem);
+    row-gap: .5rem;
+}
+
+.conhecimento:nth-child(1) {
+    grid-column: 4 / 7;
+    grid-row: 1 / 3;
+}
+
+.conhecimento:nth-child(2) {
+    grid-column: 3 / 6;
+    grid-row: 3 / 5;
+}
+
+.conhecimento:nth-child(3) {
+    grid-column: 4 / 7;
+    grid-row: 5 / -1;
+}
+
+.conhecimento:nth-child(4) {
+    grid-column: 11 / 14;
+    grid-row: 1 / 3;
+}
+
+.conhecimento:nth-child(5) {
+    grid-column: 12 / 15;
+    grid-row: 3 / 5;
+}
+
+.conhecimento:nth-child(6) {
+    grid-column: 11 / 14;
+    grid-row: 5 / -1;
+}
+
+.sessao-conhecimentos {
+    background-color: whitesmoke;
+}
+
+.sessao-header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.sessao-header h1{
+    font-family: var(--font-primary);
+    font-size: 3rem;
+    color: rgb(95, 95, 95);
+    border-bottom: solid 3px #6a3093;
+    margin-bottom: 1rem;
+}
+
+.conhecimento-header {
+    display: flex;
+    align-items: center;
+    color: rgb(95, 95, 95);
+
+}
+
+.conhecimento-header i {
+    font-size: 2.5rem;
+
+}
+
+.conhecimento-header h3 {
+    font-family: var(--font-secundary);
+    font-size: 2rem;
+    padding-left: 1rem;
+}
+
+.conhecimento-text {
+    font-family: var(--font-secundary);
+    margin-top: 1rem;
+}
+
+.conhecimentos-img-wrapper {
+    grid-column: 7 / 11;
+    grid-row: 2 / 6;
+    width: 100%;
+}
+
+.conhecimentos-img-wrapper img {
+    object-fit: cover;
+    width: 100%;
 }
